-- 01_schema.sql
-- Shared Context sample schema for Oracle Database + ORDS + APEX

SET DEFINE OFF;

-- Switch to first writable PDB when available.
DECLARE
  v_pdb VARCHAR2(128);
BEGIN
  SELECT name
    INTO v_pdb
    FROM v$pdbs
   WHERE name NOT IN ('PDB$SEED')
   ORDER BY name
   FETCH FIRST 1 ROWS ONLY;
  EXECUTE IMMEDIATE 'ALTER SESSION SET CONTAINER = ' || v_pdb;
EXCEPTION
  WHEN NO_DATA_FOUND THEN
    NULL;
END;
/

BEGIN
  EXECUTE IMMEDIATE 'DROP USER shared_ctx_user CASCADE';
EXCEPTION
  WHEN OTHERS THEN
    IF SQLCODE != -1918 THEN
      RAISE;
    END IF;
END;
/

CREATE USER shared_ctx_user IDENTIFIED BY "Welcome12345!";
GRANT CONNECT, RESOURCE TO shared_ctx_user;
GRANT CREATE VIEW, CREATE PROCEDURE TO shared_ctx_user;
ALTER USER shared_ctx_user QUOTA UNLIMITED ON USERS;

CREATE TABLE shared_ctx_user.cases (
  case_id        VARCHAR2(40) PRIMARY KEY,
  workspace_id   VARCHAR2(64) NOT NULL,
  status         VARCHAR2(30) NOT NULL,
  region         VARCHAR2(30) NOT NULL,
  study_id       VARCHAR2(30) NOT NULL,
  created_at     TIMESTAMP DEFAULT SYSTIMESTAMP NOT NULL,
  updated_at     TIMESTAMP DEFAULT SYSTIMESTAMP NOT NULL
);

CREATE TABLE shared_ctx_user.experiments (
  experiment_id  VARCHAR2(40) PRIMARY KEY,
  case_id        VARCHAR2(40) NOT NULL,
  type           VARCHAR2(40) NOT NULL,
  status         VARCHAR2(30) NOT NULL,
  started_at     TIMESTAMP DEFAULT SYSTIMESTAMP NOT NULL,
  CONSTRAINT fk_experiments_case FOREIGN KEY (case_id)
    REFERENCES shared_ctx_user.cases(case_id)
);

CREATE TABLE shared_ctx_user.samples (
  sample_id      VARCHAR2(40) PRIMARY KEY,
  experiment_id  VARCHAR2(40) NOT NULL,
  patient_id     VARCHAR2(40) NOT NULL,
  status         VARCHAR2(30) NOT NULL,
  collected_at   TIMESTAMP DEFAULT SYSTIMESTAMP NOT NULL,
  CONSTRAINT fk_samples_experiment FOREIGN KEY (experiment_id)
    REFERENCES shared_ctx_user.experiments(experiment_id)
);

CREATE TABLE shared_ctx_user.reports (
  report_id      VARCHAR2(40) PRIMARY KEY,
  case_id        VARCHAR2(40) NOT NULL,
  title          VARCHAR2(200) NOT NULL,
  body           CLOB NOT NULL,
  created_at     TIMESTAMP DEFAULT SYSTIMESTAMP NOT NULL,
  CONSTRAINT fk_reports_case FOREIGN KEY (case_id)
    REFERENCES shared_ctx_user.cases(case_id)
);

CREATE TABLE shared_ctx_user.audit_events (
  event_id         NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  case_id          VARCHAR2(40) NOT NULL,
  actor            VARCHAR2(100) NOT NULL,
  action           VARCHAR2(100) NOT NULL,
  policy_version   VARCHAR2(30) NOT NULL,
  created_at       TIMESTAMP DEFAULT SYSTIMESTAMP NOT NULL,
  details_json     CLOB CHECK (details_json IS JSON),
  CONSTRAINT fk_audit_case FOREIGN KEY (case_id)
    REFERENCES shared_ctx_user.cases(case_id)
);

CREATE TABLE shared_ctx_user.evidence_chunks (
  chunk_id       VARCHAR2(40) PRIMARY KEY,
  report_id      VARCHAR2(40) NOT NULL,
  case_id        VARCHAR2(40) NOT NULL,
  chunk_text     CLOB NOT NULL,
  embedding      VECTOR(8, FLOAT32) NOT NULL,
  created_at     TIMESTAMP DEFAULT SYSTIMESTAMP NOT NULL,
  CONSTRAINT fk_chunks_report FOREIGN KEY (report_id)
    REFERENCES shared_ctx_user.reports(report_id),
  CONSTRAINT fk_chunks_case FOREIGN KEY (case_id)
    REFERENCES shared_ctx_user.cases(case_id)
);

CREATE INDEX shared_ctx_user.idx_cases_workspace ON shared_ctx_user.cases(workspace_id, case_id);
CREATE INDEX shared_ctx_user.idx_cases_filters ON shared_ctx_user.cases(status, region, study_id, created_at);
CREATE INDEX shared_ctx_user.idx_experiments_case ON shared_ctx_user.experiments(case_id);
CREATE INDEX shared_ctx_user.idx_samples_experiment ON shared_ctx_user.samples(experiment_id);
CREATE INDEX shared_ctx_user.idx_reports_case ON shared_ctx_user.reports(case_id, created_at);
CREATE INDEX shared_ctx_user.idx_audit_case ON shared_ctx_user.audit_events(case_id, created_at DESC);
CREATE INDEX shared_ctx_user.idx_chunks_case ON shared_ctx_user.evidence_chunks(case_id, created_at DESC);

EXIT;
