erDiagram
  CASES {
    VARCHAR2 case_id PK
    VARCHAR2 workspace_id
    VARCHAR2 status
    VARCHAR2 region
    VARCHAR2 study_id
    TIMESTAMP created_at
    TIMESTAMP updated_at
  }
  EXPERIMENTS {
    VARCHAR2 experiment_id PK
    VARCHAR2 case_id FK
    VARCHAR2 type
    VARCHAR2 status
    TIMESTAMP started_at
  }
  SAMPLES {
    VARCHAR2 sample_id PK
    VARCHAR2 experiment_id FK
    VARCHAR2 patient_id
    VARCHAR2 status
    TIMESTAMP collected_at
  }
  REPORTS {
    VARCHAR2 report_id PK
    VARCHAR2 case_id FK
    VARCHAR2 title
    CLOB body
    TIMESTAMP created_at
  }
  AUDIT_EVENTS {
    NUMBER event_id PK
    VARCHAR2 case_id FK
    VARCHAR2 actor
    VARCHAR2 action
    VARCHAR2 policy_version
    TIMESTAMP created_at
    CLOB details_json
  }
  EVIDENCE_CHUNKS {
    VARCHAR2 chunk_id PK
    VARCHAR2 report_id FK
    VARCHAR2 case_id FK
    CLOB chunk_text
    VECTOR embedding
    TIMESTAMP created_at
  }

  CASES ||--o{ EXPERIMENTS : case_id
  EXPERIMENTS ||--o{ SAMPLES : experiment_id
  CASES ||--o{ REPORTS : case_id
  CASES ||--o{ AUDIT_EVENTS : case_id
  CASES ||--o{ EVIDENCE_CHUNKS : case_id
  REPORTS ||--o{ EVIDENCE_CHUNKS : report_id
